*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.6 ===
* Equalizer is now smoothly operating with frequency/gain/q factor for each
  mode: FIR, IIR, FFT, SPM.
* Added shared objects related to 3D rendering to LV2, VST and CLAP packages.
* Fixed buggy tether for the parameter popup window. 
* Fixed improper data stream synchronization using LV2:Atom protocol.
* Implemented linear ramping lramp_* functions in the lsp-dsp-lib optimized for
  i686, x86_64, ARM32 and AArch64 architectures.
* Fixed avx::dyn_biquad_process_x8_fma3 function implementation which could cause
  some data distortion in the output buffer.

=== 1.2.5 ===
* Introduced CLAP plugin format support.
* Introduced the 'Override Hydrogen drumkit' feature for Multisampler plugin series.
* Reworked and simplified the behaviour of the parameters that define 'Stretch' and
  'Loop' ranges.
* Minimum and maximum values now depend on the sample length for several parameters
  like 'Stretch', 'Loop', 'Fade in' and 'Fade out' in the Sampler and Multisampler
  plugin series.
* Fixed the application menu spam in GNOME environment by reworking the XDG files
  (contributed by sdwolfz).
* Changed VST parameter normalized value mapping for logarithmic parameters.
* Added possibility to specify JACK connections that should be estimated by the
  standalone JACK plugin when the plugin connects to the JACK server.
* Implemented plugin metadata validator which runs at the build stage and verifies
  the consistency of the plugin metadata.
* Fixed bug related to modification of cyclic parameters for several plugin formats.
* Fixed possible crash when importing configuration data from clipboard.
* Added possibility to enable/disable Knob's scale actions.
* Several bugfixes related to the memory access in the lsp-ws-lib.

=== 1.2.4 ===
* Implemented Noise Generator plugin series.